allow sub info cells a break opportunity, which avoids them going out of bounds

--- a/TASVideos/wwwroot/css/partials/_customizations.scss
+++ b/TASVideos/wwwroot/css/partials/_customizations.scss
@@ -643,6 +643,7 @@ fieldset {
 	background-color: var(--bs-tertiary-bg);
 	border: 1px solid var(--bs-light-border-subtle);
 	padding: 0.5em 1em;
+	word-break: break-word;
 
 	label {
 		font-weight: bold;
